k8s/database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
  labels:
    app: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      name: database
      labels:
        app: database
    spec:
      containers:
        - name: database
          image: evgeniyp92/mqchat-database
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4000
              protocol: TCP
      restartPolicy: Always
