k8s/database-clusterip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: database-clusterip-service
spec:
  selector:
    app: database
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
  type: ClusterIP
