k8s/frontend-clusterip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-clusterip-service
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
