k8s/frontend-node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-node-port
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      nodePort: 31515
  type: NodePort
