k8s/kafka-clusterip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-clusterip-service
spec:
  type: ClusterIP
  selector:
    app: kafka
  ports:
    - protocol: TCP
      port: 4500
      targetPort: 4500
